# devterm-plugin

./: README.md  pyproject.toml
devterm_plugin/: __init__.py  main.py
docs/: ARCHITECTURE.md
src/: main.py
