[project]
name = "devterm-plugin"
version = "1.0.0"
description = "DevTerm Plugin - Extensible plugin system for DevTerm"
authors = [{name = "DevTerm Team"}]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "importlib-metadata>=6.0",
]

[project.scripts]
devterm-plugin = "devterm_plugin.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devterm_plugin*"]
